syntax = "proto3";

option csharp_namespace = "ToDoList.BenchmarkApp";

package todo;

service ToDo {
  rpc Get (GetTodosRequest) returns (GetTodosResponse);
  rpc Create (CreateTodoRequest) returns (CreateTodoResponse);
}

message GetTodosRequest {

}

message GetTodosResponse {
  string todos = 1;
}

message CreateTodoRequest {
  string request = 1;
}

message CreateTodoResponse {
  int64 id = 1;
}
